fix caption size becoming too big
it uses an em, so it already is getting scaled via the container size

--- a/generic-styles/content-baked.less
+++ b/generic-styles/content-baked.less
@@ -450,7 +450,7 @@ h1.example-title .text {
   .os-caption-container {
     padding: 8px;
     border-top: 0.1rem solid @gray-lighter;
-    .content-font-size(0.9em);
+    font-size: 0.9em;
 
     .os-title-label,
     .os-number {
